# Simple-Windows-Screen-Saver

./: CMakeLists.txt  README.md
Binary/: ScreenSaver.scr
Source/: Config.h  ConfigComponent.h  ImageComponent.h  Main.cpp  SaverComponent.h  SharedState.h
